# regolith-inputd

./: Cargo.toml  Makefile  org.gnome.desktop.peripherals.gschema.xml
data/: regolith-init-inputd.service
debian/: changelog  control  copyright  install
src/: input_sources.rs  keyboard.rs  lib.rs  main.rs  mouse.rs  touchpad.rs  traits.rs  utils.rs
