[package]
name = "regolith-inputd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = "0.3.23"
gio = "0.15.12"
log = "0.4"
pretty_env_logger = "0.4.0"
swayipc = "3.0.1"
swayipc-async = "2.0.0"
tokio = { version = "1.20.1", features = ["full"] }
