[package]
name = "regolith-inputd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.15.12"
glib = "0.15.12"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = "1.0.151"
serde_json = "1.0.91"
swayipc = "3.0.1"
